kubernetes/apps/iot/emqx/cluster/httproute-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-mqtt-external
  labels:
    app.kubernetes.io/name: emqx
    app.kubernetes.io/instance: emqx
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - mqtt.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mqtt
      backendRefs:
        - name: emqx-listeners
          port: 8083
