kubernetes/apps/iot/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
  labels:
    app.kubernetes.io/name: emqx
    app.kubernetes.io/instance: emqx
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - "emqx.k8s.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
